fix: Update cover-container z-index dynamically

--- a/src/scss/cover.scss
+++ b/src/scss/cover.scss
@@ -7,7 +7,7 @@
   width: 100%;
   opacity: 1;
   transition: top 0.4s ease;
-  z-index: $loading-overlay + 1;
+  z-index: 2;
   overflow-y: auto;
   overflow-x: hidden;
   color: $offwhite;
@@ -15,6 +15,7 @@
   &.showing {
     top: 0;
     left: 0;
+    z-index: $loading-overlay + 1;
   }
 }
 
@@ -41,6 +42,7 @@
     right: 7px;
     transition: all 0.6s ease;
     transition-delay: 0;
+    z-index: 10;
   }
 
   .cover-logo-container {
